# mousetweaks

./: AUTHORS  ChangeLog  Makefile.am  NEWS  README  accessibility.js  autogen.sh  configure.ac  mousetweaks-gui.sh  mousetweaks.desktop
data/: DwellClick_Factory.server.in.in  Makefile.am  ctw.glade  mousetweaks-preferences.desktop.in  mousetweaks.desktop.in  mousetweaks.glade  mousetweaks.schemas  pointer-capture-applet.glade  pointer-capture-applet.schemas
help/: Makefile.am
help/zh_CN/: zh_CN.po
pixmaps/: Makefile.am
po/: ChangeLog  LINGUAS  POTFILES.in  ar.po  ast.po  be.po  bg.po  bn_IN.po  ca@valencia.po  cs.po  da.po  de.po  es.po  et.po  eu.po  fr.po  gl.po  hi.po  id.po  it.po  ja.po  kn.po  lt.po  nn.po  ru.po  sk.po  sq.po  sr.po  sr@latin.po  te.po  tr.po  vi.po  zh_CN.po
src/: Makefile.am  dwell-click-applet.c  mt-common.c  mt-common.h  mt-ctw.c  mt-ctw.h  mt-cursor-manager.c  mt-cursor.c  mt-dbus.c  mt-dbus.h  mt-listener.c  mt-listener.h  mt-main.c  mt-main.h  mt-service.c  mt-service.h  mt-session.c  mt-session.h  pointer-capture-applet.c  preferences.c
